# 3D_Temperature_Distribution

./: .gitignore  CMakeLists.txt  README.md
sources/: CMakeLists.txt  main.cpp
sources/GradientSchemes/: LeastSquareGradient.cpp  LeastSquareGradient.h
sources/Mesh/: Cell.cpp  Cell.h  CellCalculation.cpp  CellCalculation.h  Mesh.cpp  Mesh.h  MeshReader.h  Node.cpp  Node.h  Triangle.cpp  Triangle.h  parser.py
sources/Mesh/GMSHMeshes/: test_cube.msh
sources/Mesh/PrepearedMeshes/: test_mesh_cube.csv
tests/: CMakeLists.txt  test_dense_matrix.cpp  test_read_mesh.cpp  test_vector.cpp
